--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@ nav .mobile a{
    background-image: url('images/contact.jpg');
    background-position: center;
    background-size: cover;
-   box-shadow: inset 0px 0px 60px 60px #000;
+   /* box-shadow: inset 0px 0px 60px 60px #000; */
 }
 .contact .left{
    padding-top: 40%;
@@ -289,8 +289,9 @@ footer .container{
    display:flex;
    align-items: center;
    justify-content: space-around;
-   padding: 10px 0;
+   padding: 20px 0;
    background-color: #000;
+   box-shadow: 0 0 10px 5px #000;
 }
 footer .container .logo{
    color: #ffffff;
@@ -495,7 +496,7 @@ footer .container .mobile a{
    }
    footer .container{
       display: flex;
-      padding: 0 20px;
+      padding: 20px;
       flex-direction:column;
       align-items: flex-start;
    }
